Align the dropdown dropmarkers on the navbar in the exact middle, so they stop floating.

--- a/ui/css/treeherder-navbar.css
+++ b/ui/css/treeherder-navbar.css
@@ -89,6 +89,7 @@ label.dropdown-item.active,
 
 .nav-menu-btn:after {
   font-size: 14px;
+  vertical-align: middle;
 }
 
 .nav-help-btn {
